style.css
@keyframes movingstripesbg {
    0% {
        background-position-x: 0px;
    }
    100% {
        background-position-x: calc(2.222222222 * 100vh * -1);
    }
}

body {
    margin:0;
    padding:0;
    width:100vw;
    min-height:100vh;
    font-size:15px;
    color:#1c6b7d;
    font-family:"Pixelify Sans", sans-serif;
    font-weight: 400;
    font-style: normal;
    display:flex;
    justify-content: center;
}

.body-background {
    background: url("graphics/ocean.png");
    height:100vh;
    position:fixed;
    z-index:1;
    image-rendering:pixelated;
    background-size:auto 100vh;
    width:100vw;
    animation-name:movingstripesbg;
    animation-duration:30s;
    animation-timing-function:linear;
    animation-iteration-count:infinite;
}

#invert-colors:checked ~ .middled {
    filter: invert(100%);
}

#invert-colors:checked ~ .body-background div {
    height:100vh;
    width:100vw;
    backdrop-filter:invert(1);
}

code {
    background-color:#c7f5ff;
    margin-left:3px;
    margin-right:3px;
    padding:1px;
    padding-left:7px;
    padding-right:7px;
    border: #1c6b7d 1px solid;
    border-radius: 7px;
}

.key {
    background:#ffffff;
    border: #000000 2px solid;
    padding:1px;
    padding-right:5px;
    padding-left:5px;
    border-radius:6px;
    margin-left:2px;
    color:#000000;
}

.top-signature {
    font-family:monospace;
    display:flex;
    justify-content: center;
}

.inline {
    display:inline-block;
}

.float-right {
    float:right;
}

.middled {
    background: #00000000;
    width:1200px;
    height:fit-content;
    min-width:1200px;
    margin:20px;
    z-index:2;
    margin-top:0;
    display:grid;
    grid-template-rows: 160px auto;
}

.bordering {
    border: 3px dashed #62ecd7;
}

/* geniunely surprised it let me do this tbh. */
@media not all and (min-width:1240px) {
    body {
        display:none;
    }
    head {
        display:block;
    }
    head {
        display:flex;
        height:100vh;
        background-color:#ffffff;
        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
        align-items:center;
        justify-content: center;
    }
    head::before {
        content:"this website is best viewed on a computer";
    }
}

.content {
    background:#d6f0f0;
    height:100%;
    display:grid;
    grid-template-columns: 160px calc(100% - 160px);
}

#main-content {
    margin:20px;
    margin-left:0;
}

.sidebar-section {
    border:3px dotted #4fb0c5;
    padding:5px;
    margin:10px;
    margin-top:0;
}

.sidebar-section div:hover {
    background:#ffffff;
}

.sidebar-section div {
    cursor:pointer;
}

.sidebar-option {
    cursor:pointer;
}
.sidebar-option:hover {
    background:#ffffff;
}

h2 {
    margin-bottom:0;
}



.sidebar-separator {
    margin:10px;
    margin-bottom:5px;
    border: 2px dashed #4fb0c5;
    background: #9ddae8;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    padding:5px;
    display:flex;
    justify-content: center;
}

.sidebar-separator-closed {
    border-radius: 0;
}

.sidebar-text {
    margin: 10px;
    margin-top: 0;
}

.display-none {
    display:none;
}

/* very useful for content styling */

.linklike {
    text-decoration: underline;
    color:rgb(0,0,238);
    cursor:pointer;
}


.hidden-a {
    color: #1c6b7d;
    text-decoration:none;
    cursor:none;
}

@keyframes becomebig {
    0% {
        scale:1;
    }
    100% {
        scale:1.2;
    }
}

@keyframes becomesmall {
    0% {
        scale:1.2;
    }
    100% {
        scale:1;
    }
}

.hoverscale {
    animation:becomesmall ease-in-out 1 0.2s;
    display:inline-block;
}

.hoverscale:hover{
    scale:1.2;
    animation-name: becomebig;
    animation-timing-function: ease-in-out;
    animation-iteration-count: 1;
    animation-duration: 0.2s;
}

a {
    color: rgb(0,0,238);
    text-decoration: underline;
    cursor:pointer;
}

#main-content a {
    animation:becomesmall ease-in-out 1 0.2s;
    display:inline-block;
    z-index:1;
    backdrop-filter: blur(4px);

}

#main-content a:hover {
    scale:1.2;
    z-index:2;
    animation-name: becomebig;
    animation-timing-function: ease-in-out;
    animation-iteration-count: 1;
    animation-duration: 0.2s;
}

.pixelart {
    image-rendering: pixelated;
}

.pixelart-inline {
    image-rendering: pixelated;
    display:inline-block;
    transform:translateY(3px);
}

.white-hover:hover {
    background:#ffffff;
}

.half-n-half {
    display:grid;
    grid-template-columns: 50% 50%;
}

.split-into-four {
    display:grid;
    grid-template-columns: 25% 25% 25% 25%;
}

.images-fill-size img {
    width:100%;
}

.clickable {
    cursor:pointer;
}

.quote {
    color: #3eadc6;
    text-align:center;
    font-style: italic;
}

.center-text {
    text-align:center;
}

.split-70-30 {
    display:grid;
    grid-template-columns: 60% 40%;
}

.split-80-20 {
    display:grid;
    grid-template-columns: 80% 20%;
}

.bordering2 {
    border:2px dotted #9ddae8;
    border-radius: 20px;
}

.margins-10 {
    margin:10px;
}

.margins-5 {
    margin:5px;
}

.padding-10 {
    padding:10px;
}

.padding-5 {
    padding:5px;
}

.text-gapper{
    display:inline-block;
    margin:5px;
}

.inline {
    display:inline-block;
}

.radius10 {
    border-radius: 10px;
}
.radius5 {
    border-radius: 5px;
}

.bgblur {
    backdrop-filter: blur(4px);
}

#popup-close {
    height:32px;
    float:right;
    width:32px;
    margin-right:10px;
    margin-top:10px;
    cursor:pointer;
    image-rendering:pixelated;
}

#popup-close:hover {
    scale:1.2;
}

#popup-content {
    width:100vw;
    height:100vh;
    display:flex;
    align-items:center;
    justify-content:center;
}

.popup-bg {
    width:100vw;
    height:100vh;
    background-color:#000000aa;
    position:fixed;
    z-index:2;
}

